--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>0.8.8</version>
             <type>maven-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.3.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
