--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <version>5.3.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
